upload/target/MCParser.py
# Generated from main/mc/parser/MC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'void'", "'boolean'", "'break'", 
                     "'continue'", "'else'", "'for'", "'float'", "'if'", 
                     "'return'", "'do'", "'while'", "'string'", "'+'", "'*'", 
                     "'!'", "'||'", "'!='", "'<'", "'<='", "'='", "'-'", 
                     "'/'", "'%'", "'&&'", "'=='", "'>'", "'>='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'{'", "'}'", 
                     "';'", "','", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "INTTYPE", "VOIDTYPE", "BOOLTYPE", "BREAK", 
                      "CONTINUE", "ELSE", "FOR", "FLOATTYPE", "IF", "RETURN", 
                      "DO", "WHILE", "STRINGTYPE", "ADD", "MULTIPLICATION", 
                      "NOT", "OR", "NOT_EQUAL", "LESS_THAN", "LESS_THAN_OR_EQUAL", 
                      "ASSIGN", "SUB", "DIVISION", "MODULUS", "AND", "EQUAL", 
                      "GREATER_THAN", "GREATER_THAN_OR_EQUAL", "INTLIT", 
                      "FLOAT_LITERAL", "BOOLEAN_LIT", "LB", "RB", "LP", 
                      "RP", "SEMI", "COMMA", "LSB", "RSB", "WS", "BLOCK_COMMENT", 
                      "LINE_COMMENT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "STRING_LIT", "ID", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_manydeclarations = 1
    RULE_declaration = 2
    RULE_var_declaration = 3
    RULE_primitive_type = 4
    RULE_var_one = 5
    RULE_array_id_var = 6
    RULE_var_list = 7
    RULE_func_declaration = 8
    RULE_func_type = 9
    RULE_array_id_func = 10
    RULE_func_list_para = 11
    RULE_func_list_para_one = 12
    RULE_block_statement = 13
    RULE_list_in_block = 14
    RULE_funcall = 15
    RULE_list_expression = 16
    RULE_literals = 17
    RULE_operand = 18
    RULE_expression = 19
    RULE_expression1 = 20
    RULE_expression2 = 21
    RULE_expression3 = 22
    RULE_expression4 = 23
    RULE_expression5 = 24
    RULE_expression6 = 25
    RULE_expression7 = 26
    RULE_expression8 = 27
    RULE_expression9 = 28
    RULE_statement = 29
    RULE_callstatement = 30
    RULE_ifstatement = 31
    RULE_dowhile_statement = 32
    RULE_forstatement = 33
    RULE_breakstatement = 34
    RULE_continuestatement = 35
    RULE_returnstatement = 36
    RULE_expressionstatement = 37

    ruleNames =  [ "program", "manydeclarations", "declaration", "var_declaration", 
                   "primitive_type", "var_one", "array_id_var", "var_list", 
                   "func_declaration", "func_type", "array_id_func", "func_list_para", 
                   "func_list_para_one", "block_statement", "list_in_block", 
                   "funcall", "list_expression", "literals", "operand", 
                   "expression", "expression1", "expression2", "expression3", 
                   "expression4", "expression5", "expression6", "expression7", 
                   "expression8", "expression9", "statement", "callstatement", 
                   "ifstatement", "dowhile_statement", "forstatement", "breakstatement", 
                   "continuestatement", "returnstatement", "expressionstatement" ]

    EOF = Token.EOF
    INTTYPE=1
    VOIDTYPE=2
    BOOLTYPE=3
    BREAK=4
    CONTINUE=5
    ELSE=6
    FOR=7
    FLOATTYPE=8
    IF=9
    RETURN=10
    DO=11
    WHILE=12
    STRINGTYPE=13
    ADD=14
    MULTIPLICATION=15
    NOT=16
    OR=17
    NOT_EQUAL=18
    LESS_THAN=19
    LESS_THAN_OR_EQUAL=20
    ASSIGN=21
    SUB=22
    DIVISION=23
    MODULUS=24
    AND=25
    EQUAL=26
    GREATER_THAN=27
    GREATER_THAN_OR_EQUAL=28
    INTLIT=29
    FLOAT_LITERAL=30
    BOOLEAN_LIT=31
    LB=32
    RB=33
    LP=34
    RP=35
    SEMI=36
    COMMA=37
    LSB=38
    RSB=39
    WS=40
    BLOCK_COMMENT=41
    LINE_COMMENT=42
    UNCLOSE_STRING=43
    ILLEGAL_ESCAPE=44
    STRING_LIT=45
    ID=46
    ERROR_CHAR=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manydeclarations(self):
            return self.getTypedRuleContext(MCParser.ManydeclarationsContext,0)


        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def getRuleIndex(self):
            return MCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.manydeclarations()
            self.state = 77
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManydeclarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MCParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_manydeclarations

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManydeclarations" ):
                return visitor.visitManydeclarations(self)
            else:
                return visitor.visitChildren(self)




    def manydeclarations(self):

        localctx = MCParser.ManydeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manydeclarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self.declaration()
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTTYPE) | (1 << MCParser.VOIDTYPE) | (1 << MCParser.BOOLTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.STRINGTYPE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaration(self):
            return self.getTypedRuleContext(MCParser.Var_declarationContext,0)


        def func_declaration(self):
            return self.getTypedRuleContext(MCParser.Func_declarationContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.var_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.func_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def var_list(self):
            return self.getTypedRuleContext(MCParser.Var_listContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_var_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declaration" ):
                return visitor.visitVar_declaration(self)
            else:
                return visitor.visitChildren(self)




    def var_declaration(self):

        localctx = MCParser.Var_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.primitive_type()
            self.state = 89
            self.var_list()
            self.state = 90
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTTYPE(self):
            return self.getToken(MCParser.INTTYPE, 0)

        def BOOLTYPE(self):
            return self.getToken(MCParser.BOOLTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(MCParser.STRINGTYPE, 0)

        def FLOATTYPE(self):
            return self.getToken(MCParser.FLOATTYPE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_primitive_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive_type" ):
                return visitor.visitPrimitive_type(self)
            else:
                return visitor.visitChildren(self)




    def primitive_type(self):

        localctx = MCParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTTYPE) | (1 << MCParser.BOOLTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.STRINGTYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_oneContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def array_id_var(self):
            return self.getTypedRuleContext(MCParser.Array_id_varContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_var_one

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_one" ):
                return visitor.visitVar_one(self)
            else:
                return visitor.visitChildren(self)




    def var_one(self):

        localctx = MCParser.Var_oneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_one)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.array_id_var()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_id_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_array_id_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_id_var" ):
                return visitor.visitArray_id_var(self)
            else:
                return visitor.visitChildren(self)




    def array_id_var(self):

        localctx = MCParser.Array_id_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array_id_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(MCParser.ID)
            self.state = 99
            self.match(MCParser.LSB)
            self.state = 100
            self.match(MCParser.INTLIT)
            self.state = 101
            self.match(MCParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_one(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Var_oneContext)
            else:
                return self.getTypedRuleContext(MCParser.Var_oneContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_var_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_list" ):
                return visitor.visitVar_list(self)
            else:
                return visitor.visitChildren(self)




    def var_list(self):

        localctx = MCParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.var_one()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.COMMA:
                self.state = 104
                self.match(MCParser.COMMA)
                self.state = 105
                self.var_one()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_type(self):
            return self.getTypedRuleContext(MCParser.Func_typeContext,0)


        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def block_statement(self):
            return self.getTypedRuleContext(MCParser.Block_statementContext,0)


        def func_list_para(self):
            return self.getTypedRuleContext(MCParser.Func_list_paraContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_func_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_declaration" ):
                return visitor.visitFunc_declaration(self)
            else:
                return visitor.visitChildren(self)




    def func_declaration(self):

        localctx = MCParser.Func_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.func_type()
            self.state = 112
            self.match(MCParser.LB)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTTYPE) | (1 << MCParser.BOOLTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.STRINGTYPE))) != 0):
                self.state = 113
                self.func_list_para()


            self.state = 116
            self.match(MCParser.RB)
            self.state = 117
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def array_id_func(self):
            return self.getTypedRuleContext(MCParser.Array_id_funcContext,0)


        def VOIDTYPE(self):
            return self.getToken(MCParser.VOIDTYPE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_func_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_type" ):
                return visitor.visitFunc_type(self)
            else:
                return visitor.visitChildren(self)




    def func_type(self):

        localctx = MCParser.Func_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func_type)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.INTTYPE, MCParser.BOOLTYPE, MCParser.FLOATTYPE, MCParser.STRINGTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.primitive_type()
                self.state = 122
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MCParser.ID]:
                    self.state = 120
                    self.match(MCParser.ID)
                    pass
                elif token in [MCParser.LSB]:
                    self.state = 121
                    self.array_id_func()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [MCParser.VOIDTYPE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.match(MCParser.VOIDTYPE)
                self.state = 125
                self.match(MCParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_id_funcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def getRuleIndex(self):
            return MCParser.RULE_array_id_func

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_id_func" ):
                return visitor.visitArray_id_func(self)
            else:
                return visitor.visitChildren(self)




    def array_id_func(self):

        localctx = MCParser.Array_id_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_array_id_func)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(MCParser.LSB)
            self.state = 129
            self.match(MCParser.RSB)
            self.state = 130
            self.match(MCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_list_paraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_list_para_one(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Func_list_para_oneContext)
            else:
                return self.getTypedRuleContext(MCParser.Func_list_para_oneContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_func_list_para

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_list_para" ):
                return visitor.visitFunc_list_para(self)
            else:
                return visitor.visitChildren(self)




    def func_list_para(self):

        localctx = MCParser.Func_list_paraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_func_list_para)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.func_list_para_one()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.COMMA:
                self.state = 133
                self.match(MCParser.COMMA)
                self.state = 134
                self.func_list_para_one()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_list_para_oneContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_func_list_para_one

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_list_para_one" ):
                return visitor.visitFunc_list_para_one(self)
            else:
                return visitor.visitChildren(self)




    def func_list_para_one(self):

        localctx = MCParser.Func_list_para_oneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_func_list_para_one)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.primitive_type()
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 141
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.state = 142
                self.match(MCParser.ID)
                self.state = 143
                self.match(MCParser.LSB)
                self.state = 144
                self.match(MCParser.RSB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def list_in_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.List_in_blockContext)
            else:
                return self.getTypedRuleContext(MCParser.List_in_blockContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_block_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_statement" ):
                return visitor.visitBlock_statement(self)
            else:
                return visitor.visitChildren(self)




    def block_statement(self):

        localctx = MCParser.Block_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_block_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(MCParser.LP)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTTYPE) | (1 << MCParser.BOOLTYPE) | (1 << MCParser.BREAK) | (1 << MCParser.CONTINUE) | (1 << MCParser.FOR) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.IF) | (1 << MCParser.RETURN) | (1 << MCParser.DO) | (1 << MCParser.STRINGTYPE) | (1 << MCParser.NOT) | (1 << MCParser.SUB) | (1 << MCParser.INTLIT) | (1 << MCParser.FLOAT_LITERAL) | (1 << MCParser.BOOLEAN_LIT) | (1 << MCParser.LB) | (1 << MCParser.LP) | (1 << MCParser.STRING_LIT) | (1 << MCParser.ID))) != 0):
                self.state = 148
                self.list_in_block()
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 154
            self.match(MCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_in_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaration(self):
            return self.getTypedRuleContext(MCParser.Var_declarationContext,0)


        def statement(self):
            return self.getTypedRuleContext(MCParser.StatementContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_list_in_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_in_block" ):
                return visitor.visitList_in_block(self)
            else:
                return visitor.visitChildren(self)




    def list_in_block(self):
